--- a/style.css
+++ b/style.css
@@ -23,3 +23,29 @@
     border-radius: 3px 3px 7px 25px;
 }
 
+
+
+ .material-symbols-outlined {
+     font-variation-settings:
+             'FILL' 0,
+             'wght' 200,
+             'GRAD' 0,
+             'opsz' 0
+ }
+
+
+@media all and (max-width: 500px){
+    body {
+        padding-top: 0%;
+    }
+    #col2{
+        margin-right: 30%;
+    }
+    #add{ /*btn add*/
+        margin-left: 40%;
+    }
+    #displayList{
+        margin-left: 70%;
+    }
+
+}
